Bug 227121. A scrolled element's frame size should be set to the max of its desired size and the scrollport size, and should not depend on its overflow. Fixes an incremental reflow bug with scrolled frames. r+sr=dbaron